After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782957 - vaapivp8enc: doesn't set quality level if CQP
vaapivp8enc: doesn't set quality level if CQP
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
git master
Other Linux
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-22 15:24 UTC by Hyunjun Ko
Modified: 2017-05-23 10:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libs: encoder: vp8: set quality level regardless of rate control mode (1.32 KB, patch)
2017-05-22 15:26 UTC, Hyunjun Ko
committed Details | Review

Description Hyunjun Ko 2017-05-22 15:24:58 UTC
Currently, it doesn't call gst_vaapi_encoder_ensure_param_quality_level if rate control mode is CQP.
Comment 1 Hyunjun Ko 2017-05-22 15:26:02 UTC
Created attachment 352362 [details] [review]
libs: encoder: vp8: set quality level regardless of rate  control mode
Comment 2 Víctor Manuel Jáquez Leal 2017-05-23 10:12:08 UTC
e66aaf16 libs: encoder: vp8: set quality level regardless of rate control mode