libs: encoder: vp8: set quality level regardless of rate control mode

https://bugzilla.gnome.org/show_bug.cgi?id=782957